# python-project-template

./: README.md
data/: README.md
notes/: .gitignore  README.md  example.md
notes/.obsidian/: app.json  appearance.json  graph.json  workspace.json
src/: README.md  pyproject.toml
src/local_lib/: README.md  __init__.py  pyproject.toml
src/local_lib/local_lib/: __init__.py
src/local_lib/tests/: test_hello_world.py
src/notebooks/: README.md  hello_world.ipynb
src/scripts/: README.md  hello_world.py
